  GetBufferSize. The BufferUsage traced value was removed, but the method with
  the same can be used to get this value on demand.

- Improving OFSwitch13StatsCalculator with more statistics. It can now dump
  individual flow table stats. This is an optional feature (disabled by
  default), that can be enabled by the FlowTableDetails attribute.

- This version is compatible with ofsoftswitch13 library release v3.3.x and
  ns-3 versions 3.28 or later (including patches). There is no backward
  compatibility with older ns-3 versions.


Release 3.3.0 (Sep 29, 2018)
============================

- Fix incorrect bitwise comparison when checking port configuration.

- Fix incorrect ns-3 version comparison that was preventing module
  configuration in ns-3.28.1

- Introducing a new OFSwitch13Device PipelineTables attribute, allowing a
  custom number of pipeline flow tables in the switch.

- The OFSwitch13Device PipelineTables, FlowTableSize, GroupTableSize, and
  MeterTableSize attributes must now be adjusted at construction time. You can
  use the OFSwitch13Helper::SetDeviceAttribute to accomplish this task.

- Renaming OFSwitch13Device::GetFlowEntries (void) to GetSumFlowEntries (void)
  and the OFSwitch13StatsCalculator::GetEwmaFlowEntries (void) to
  GetEwmaSumFlowEntries (void) to better describe that these methods return the
  sum of entries in all pipeline tables.

- Merging new commits from the CPqD ofsoftswitch13 library.

- Preparing patches for ns-3.29.

- This version is compatible with ofsoftswitch13 library release v3.3.x and
  ns-3 versions 3.28 and 3.29 (including patches). There is no backward
  compatibility with older ns-3 versions.


Release 3.2.2 (Jul 05, 2018)
============================

- Fixing errors when compiling the project with gcc 7.3.0 in Ubuntu 18.04.

- Moving the project from the mercurial repository in the BitBucket to a new
  git repository in the GitHub, and updating the documentation to reflect these
  changes.
